test/tests/operators/to_file/validation/error_write_nonexistent_dir.txt
error: failed to create directory `/nonexistent/deeply/nested/path`: IOError: Cannot create directory '/nonexistent'. Detail: [errno 13] Permission denied
 --> tests/operators/to_file/validation/error_write_nonexistent_dir.tql:6:9
  |
6 | to_file "/nonexistent/deeply/nested/path/out.json" {
  |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ 
  |
